[package]
name = "vapoursynth-sys"
edition = "2024"
version = "0.6.0"
description = "Rust bindings for vapoursynth and vsscript."
license = "MIT/Apache-2.0"
build = "build.rs"

readme = "../README.md"
documentation = "https://docs.rs/vapoursynth-sys"
repository = "https://github.com/rust-av/vapoursynth-rs"
keywords = ["vapoursynth", "vsscript", "video", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "multimedia::video"]

[badges]
travis-ci = { repository = "rust-av/vapoursynth-rs" }
appveyor = { repository = "rust-av/vapoursynth-rs" }

[dependencies]
libloading = "0.9.0"

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }

[features]
default = []
# Rebuild the bindings, primarily for development
bindgen = ["dep:bindgen"]

# Force RTLD_GLOBAL flag for dlopen, compatibiltiy with older VapourSynth versions
# Only has an effect for `unix` target family
vsscript-r73-compat = []
