[package]
name = "vapoursynth"
edition = "2024"
version = "4.0.0"
description = "Safe Rust wrapper for VapourSynth and VSScript."
license = "MIT/Apache-2.0"

readme = "../README.md"
documentation = "https://docs.rs/vapoursynth"
repository = "https://github.com/YaLTeR/vapoursynth-rs"
keywords = ["vapoursynth", "vsscript", "video", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "multimedia::video"]

[badges]
travis-ci = { repository = "YaLTeR/vapoursynth-rs" }
appveyor = { repository = "YaLTeR/vapoursynth-rs" }

[dependencies]
half = { version = "2.0.0", optional = true }
anyhow = "1.0.58"
thiserror = "2.0.17"
vapoursynth-sys = { version = "4.0", path = "../vapoursynth-sys" }

[dev-dependencies]
clap = "3.2.10"

[dev-dependencies.num-rational]
version = "0.4.1"
default-features = false
features = ["std"]

[features]
default = ["vapoursynth-functions", "vsscript-functions"]
# Features for linking to certain functions.
vapoursynth-functions = ["vapoursynth-sys/vapoursynth-functions"]
vsscript-functions = ["vapoursynth-sys/vsscript-functions"]
# Enable the half::f16 type to be used for frame pixel data.
f16-pixel-type = ["half"]

[package.metadata.docs.rs]
features = ["vapoursynth-functions", "vsscript-functions", "f16-pixel-type"]
